fix: fix application cannot start due to private sound import